// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic will assert a joined property's value 1`] = `
	select
	  \`COUNT(*)\` as \`count\`
	from
	  \`foo\`
	  inner join \`bar\` on \`bar\`.\`color\` = \`foo\`.\`color\`
	where
	  \`bar\`.\`value\` = 42
`;

exports[`basic will emit where clauses 1`] = `
	select
	  \`COUNT(*)\` as \`count\`
	from
	  \`test\`
	where
	  \`test\`.\`a\` = 1
	  and \`test\`.\`b\` <> 2
	  and \`test\`.\`c\` > 3
	  and \`test\`.\`d\` < 4
`;

exports[`nested will match nested values 1`] = `
	select
	  \`COUNT(*)\` as \`count\`
	from
	  \`foo\`
	  inner join \`bar\` on \`bar\`.\`color\` = \`foo\`.\`color\`
	where
	  \`foo\`.\`name\` = 'Gabe'
	  and \`bar\`.\`value\` = 42
`;
